# aeval-backend

./: .gitignore  ANTHROPIC_MAPPING.md  API_TESTING_REPORT.md  ARCHITECTURE.md  ENHANCEMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  ZAI_SETUP_SUMMARY.md
backend/: .env.example  .gitignore  debug_llm.py  pyproject.toml  requirements.txt  setup.sh  test_api_integration.py  test_api_manual.py  test_setup.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  evaluation_agent.py
backend/app/api/: __init__.py  chat.py
backend/app/models/: __init__.py  agent.py  dataset.py  metric.py  recommendation.py  scenario.py
backend/app/services/: __init__.py  chat_service.py  data_service.py
backend/data/: agents.json  agents_enhanced.json  datasets.json  metrics.json  metrics_enhanced.json  scenarios.json  scenarios_enhanced.json
backend/tests/: __init__.py  fixtures.py  test_agents.py  test_api.py
